Fix color contrast in code examples
This change ensures the code examples in the component guide are accessible.

--- a/app/assets/stylesheets/govuk_publishing_components/components/helpers/_markdown-typography.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/helpers/_markdown-typography.scss
@@ -148,7 +148,7 @@
 
   code {
     padding: 0 5px;
-    color: govuk-colour("red");
+    color: #d13118;
     background-color: govuk-colour("light-grey");
   }
 }
